# dm-TubeScreamer

./: .gitignore  README.md
.github/workflows/: build.yml  dm-tubescreamer.mk
lv2/: Cargo.toml
lv2/dm-TubeScreamer.lv2/: dm-TubeScreamer.ttl  manifest.ttl  modgui.ttl
lv2/dm-TubeScreamer.lv2/modgui/: stylesheet-dm-tubescreamer.css
lv2/src/: lib.rs
nih-plug/: Cargo.toml
nih-plug/src/: editor.rs  lib.rs  tube_screamer_parameters.rs
nih-plug/src/editor/: style.css  ui_data.rs
profiling/: Cargo.toml
profiling/benches/: tube_screamer_bench.rs
profiling/src/: main.rs
scripts/: build-lv2-for-mod-desktop-mac.sh  build-vst3-for-mac.sh
sketches/transfer-functions/: clipper.asc  op_amp.asc  op_amp.py  tone.asc  tone.py
tube_screamer/: Cargo.toml
tube_screamer/src/: clipper.rs  lib.rs  op_amp.rs
tube_screamer/src/clipper/: lookup_table.rs  oversample.rs
tube_screamer/src/clipper/oversample/: fir_filter.rs
