[package]
name = "benches"
version = "0.1.0"
edition = "2021"

[profile.dev]
debug = true

[profile.release]
debug = true

[dependencies]
fastrand = "2.1.0"
tube_screamer = { path = "../tube_screamer" }

[dev-dependencies]
criterion = { version = "0.4", features = ["html_reports"] }
flamegraph = "0.3"

[[bench]]
name = "tube_screamer_bench"
harness = false
